Corrigiendo el nombre del archivo de imagen en el portafolio

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <ul class="formacion__lista">
             <li class="formacion__elemento">
                 <div class="formacion__cuadro">
-                    <img class="formacion__icono" src="assets/ugb.png" alt="UGB">
+                    <img class="formacion__icono" src="assets/UGB.png" alt="UGB">
                 </div>
                 <div class="formacion__info">
                     <h3 class="formacion__nombre">Ingeniería en Sistemas</h3>
